<resources>
    <string name="app_name">SuperHeroes</string>
    <string name="dc_super_heroes">DC Super Heroes</string>
    <string name="marvel_super_heroes">Marvel Super Heroes</string>
    <string name="crash_the_app">Crash the App</string>
    <string name="batman">Batman</string>
    <string name="wonder_woman">Wonder Woman</string>
    <string name="superman">SuperMan</string>
    <string name="green_arrow">Green Arrow</string>
    <string name="flash">Flash</string>
    <string name="iron_man">Iron Man</string>
    <string name="daredevil">Daredevil</string>
    <string name="black_widow">Black Widow</string>
    <string name="hulk">Hulk</string>
    <string name="spider_man">Spider-Man</string>


    <string name="start_phone_auth">Send OTP</string>
    <string name="verify_phone_auth">Verify OTP</string>
    <string name="resend_phone_auth">Resend OTP</string>
    <string name="resend_phone_reset">Reset</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>

    <string name="please_provide_your_phone_number">Please Provide your Phone Number</string>
    <string name="logout">LogOut</string>
    <string name="are_you_sure">Are you sure you want to logout?</string>
    <string name="welcome">Welcome</string>
</resources>
