<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:alpha="0.5"
            android:background="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/btnSpider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/btn_bg"
                android:text="@string/spider_man"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnHulk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/btn_bg"
                android:text="@string/hulk"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnIronMan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/btn_bg"
                android:text="@string/iron_man"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnDaredevil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/btn_bg"
                android:text="@string/daredevil"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnBlackWidow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/btn_bg"
                android:text="@string/black_widow"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </RelativeLayout>
</layout>