<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:alpha="0.5"
            android:background="@color/colorWhite" />

        <TextView
            android:id="@+id/txtMobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnMarvel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:background="@drawable/btn_bg"
                android:text="@string/marvel_super_heroes"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnDC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:background="@drawable/btn_bg"
                android:text="@string/dc_super_heroes"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnCrash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:background="@drawable/btn_bg"
                android:text="@string/crash_the_app"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </RelativeLayout>

</layout>